# sprint_3_elasticsearch

./: .pre-commit-config.yaml  README.md  pyproject.toml
etl/: README.md  docker-compose.dev.yaml
etl/db/: .env.example  backup-08-02-2023.sql  init.sql
etl/postgres_to_es/: .env.example  config.py  docker-entrypoint.dev.sh  main.py  pyproject.toml
etl/postgres_to_es/src/: extract.py  load.py  transform.py
etl/postgres_to_es/utils/: db_connections.py  es_mapping.json  logger.py  state.py  validators.py
etl/sqlite_to_postgres/: .env.example  Dockerfile.dev  docker-entrypoint.dev.sh  main.py  pyproject.toml
etl/sqlite_to_postgres/db/: alter_tables.sql  settings.py
etl/sqlite_to_postgres/src/: constants.py  load_from_sqlite.py  logger.py  sqlite_context_manager.py  transfer_to_psql.py  validators.py
etl/sqlite_to_postgres/tests/check_consistency/: tests.py
